<resources>
    <string name="app_name">messenger</string>
    <string name="chats">Перейти в чат</string>
    <string name="chats1">Чаты</string>
    <string name="chat">Перейти в чаты</string>
    <string name="contact">Контакты</string>
    <string name="setting">Настройки</string>
    <string name="register">Регистрация</string>
    <string name="register1">Зарегистрироваться</string>
    <string name="login">Войти</string>
    <string name="login1">Авторизация</string>
    <string name="loginE">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="dark_themes">Темная тема</string>
    <string name="dialog_confirmation">Are you sure?</string>
    <string name="ok">OK</string>
</resources>