<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".auth.RegisterFragment">

    <EditText
        android:id="@+id/Login"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/loginE"
        app:layout_constraintBottom_toTopOf="@+id/Username"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/Username"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/username"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.43" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@+id/Username" />

    <Button
        android:id="@+id/RegisterButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register1"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password"
        app:layout_constraintVertical_bias="0.054"
        />

</androidx.constraintlayout.widget.ConstraintLayout>