<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".auth.ui.LoginFragment"
    android:padding="16dp">

    <EditText
        android:id="@+id/Login"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/loginE"
        app:layout_constraintBottom_toTopOf="@+id/Password"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/loginError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text=""
        android:textColor="@color/red"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/Password"
        app:layout_constraintStart_toStartOf="@id/Login"
        app:layout_constraintTop_toBottomOf="@id/Login" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/passwordError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text=""
        android:textColor="@color/red"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/loginOrPasswordError"
        app:layout_constraintStart_toStartOf="@id/Password"
        app:layout_constraintTop_toBottomOf="@id/Password" />

    <TextView
        android:id="@+id/loginOrPasswordError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text=""
        android:textColor="@color/red"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/AuthButton"
        app:layout_constraintStart_toStartOf="@id/Password"
        app:layout_constraintTop_toBottomOf="@id/passwordError" />

    <Button
        android:id="@+id/AuthButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password"
        app:layout_constraintVertical_bias="0.054"
        />

</androidx.constraintlayout.widget.ConstraintLayout>